RESOLVED FIXED129424
JSType upper limit (0xff) assertion can be removed
https://bugs.webkit.org/show_bug.cgi?id=129424
Summary JSType upper limit (0xff) assertion can be removed
Gergő Balogh
Reported 2014-02-27 05:35:31 PST
There is no point to assert that the JSType is less or equals than 0xff, because it defined to based on uint8_t. uint8_t by definition in the standard is an 8 byte type.
Attachments
patch (1.24 KB, patch)
2014-02-27 05:44 PST, Gergő Balogh
no flags
Gergő Balogh
Comment 1 2014-02-27 05:44:39 PST
Geoffrey Garen
Comment 2 2014-02-27 10:11:42 PST
Comment on attachment 225361 [details] patch r=me
WebKit Commit Bot
Comment 3 2014-02-27 10:44:22 PST
Comment on attachment 225361 [details] patch Clearing flags on attachment: 225361 Committed r164815: <http://trac.webkit.org/changeset/164815>
WebKit Commit Bot
Comment 4 2014-02-27 10:44:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.