JSType upper limit (0xff) assertion can be removed. https://bugs.webkit.org/show_bug.cgi?id=129424

Patch by Gergo Balogh <gbalogh.u-szeged@partner.samsung.com> on 2014-02-27
Reviewed by Geoffrey Garen.

* runtime/JSTypeInfo.h:
(JSC::TypeInfo::TypeInfo):

Canonical link: https://commits.webkit.org/147502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164815 268f45cc-cd09-0410-ab3c-d52691b4dbfc